# dev-pastor-study-room

./: LICENSE  README.md
guides/gemma_example/: gemma.py  requirements.txt
guides/mistral_example/: mistral.py  requirements.txt
guides/socket_client/: README.md  config.py  main.py  pyproject.toml
guides/socket_server/: config.py  main.py  pyproject.toml  session.py
guides/socket_server/core/auth/: context.py
guides/socket_server/core/gemma/: service.py
guides/socket_server/core/handlers/: __init__.py  crud.py  message.py  user.py
guides/socket_server/core/models/: __init__.py  message.py  user.py
homeworks/: chat_history.db  client.py  server.py  test.py
