[tool.poetry]
name = "socket-server"
version = "0.1.0"
description = ""
authors = ["pastordev <pastordev@jarvis-toolkit.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
sqlmodel = "^0.0.16"
poetry-plugin-dotenv = "^0.8.3"
pydantic-settings = "^2.2.1"
rsa = "^4.9"
transformers = "^4.39.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
